--- a/client/src/App.css
+++ b/client/src/App.css
@@ -8,21 +8,22 @@
 .box {
   width: 90%;
   border: 1px black solid;
-  /* background-color: white; */
+  background-color: rgb(255, 204, 204);
   display: flex;
   justify-content: space-between;
+  align-items: center;
   padding: 5px 15px;
   margin: 5px;
 }
 .box2 {
   width: 90%;
   border: 1px black solid;
-  /* background-color: rgba(185, 209, 255, 0.445); */
+  background-color: rgba(185, 209, 255, 0.445);
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
-  padding: 10px 15px;
+  padding: 5px 15px;
   margin: 5px;
 }
 .box3 {
@@ -80,4 +81,28 @@ span {
   margin: 0 0 15px 0;
   padding: 0 13px 0 13px;
   border-radius: 10px;
+}
+
+img {
+  width: 80px;
+  height: 80px;
+  object-fit: cover;
+  border: 1px solid black;
+  border-radius: 10px;
+}
+
+.lr{
+  flex: 1;
+  border: 1px solid black;
+  margin: 5px;
+  background-color: white;
+}
+
+.lr > img{
+  width: 300px;
+  height: 300px;
+  object-fit: cover;
+  border: 1px solid black;
+  border-radius: 10px;
+  margin: 5px;
 }
