--- a/client/src/App.css
+++ b/client/src/App.css
@@ -92,6 +92,7 @@ img {
 }
 
 .lr{
+  height: 500px;
   flex: 1;
   border: 1px solid black;
   margin: 5px;
@@ -104,5 +105,15 @@ img {
   object-fit: cover;
   border: 1px solid black;
   border-radius: 10px;
-  margin: 5px;
+  margin: 30px;
+}
+
+h4{
+  margin: 10px;
+}
+
+.l{
+  display: flex;
+
+
 }
