--- a/client/src/App.css
+++ b/client/src/App.css
@@ -37,6 +37,19 @@
   padding: 10px 15px;
   margin: 5px;
 }
+.box4{
+  width: 90%;
+  border: 1px black solid;
+  background-color: rgba(185, 255, 212, 0.445);
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  padding: 10px 15px;
+  margin: 5px;
+}
+
+/*
 
 .float-container {
   border: solid 1px black;
@@ -49,14 +62,14 @@
 .float-container input {
   border: none;
   font-size: 16px;
-  /* margin: 0 0 1px; */
+
   padding: 0 0 1px;
   outline: 0;
   background-color: rgba(255, 255, 255, 0.788);
 }
 label {
   font-size: 16px;
-  /* background-color: white; */
+
   color: black;
   position: absolute;
   transform-origin: top left;
@@ -65,17 +78,17 @@ label {
 
 }
 .float-container.active label {
-  /* transform: translate(-12px, -15px) scale(.75); */
+
   transform: translate(5px, -19px) scale(0.75);
-  /* border: 1px solid black; */
+
   color: black;
-  /* font-weight: bold; */
-  /* border-radius: 2px; */
+
   background-color: rgba(255, 255, 255, 0);
-  /* background-color: rgb(236, 236, 236); */
+
   padding: 0px 3px 0px 3px;
 
 }
+*/
 
 span {
   margin: 0 0 15px 0;
