delete messages cleaned

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -6,46 +6,63 @@
 }
 
 .box {
-  width: 90%;
+  width: 98%;
   border: 1px black solid;
-  background-color: rgb(255, 204, 204);
+  border-radius: 3px;
+  background-color: rgba(139, 124, 124, 0.432);
   display: flex;
-  justify-content: space-between;
+  flex-wrap: wrap;
+  justify-content: space-around;
   align-items: center;
-  padding: 5px 15px;
+  padding: 5px;
   margin: 5px;
 }
 .box2 {
-  width: 90%;
+  width: 98%;
   border: 1px black solid;
-  background-color: rgba(185, 209, 255, 0.445);
+  border-radius: 3px;
+  background-color: rgba(139, 124, 124, 0.148);
   display: flex;
-  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: space-around;
   align-items: center;
-  justify-content: space-between;
-  padding: 5px 15px;
+  padding: 5px;
   margin: 5px;
 }
 .box3 {
-  width: 90%;
+  width: 98%;
   border: 1px black solid;
-  background-color: rgba(185, 209, 255, 0.445);
+  border-radius: 3px;
+  background-color: rgba(52, 93, 63, 0.132);
   display: flex;
-  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: space-around;
   align-items: center;
-  justify-content: space-between;
-  padding: 10px 15px;
+  padding: 5px;
   margin: 5px;
 }
 .box4{
-  width: 90%;
+  width: 98%;
   border: 1px black solid;
-  background-color: rgba(185, 255, 212, 0.445);
+  border-radius: 3px;
+  background-color: rgba(128, 45, 45, 0.185);
   display: flex;
-  flex-direction: row;
-  align-items: center;
+  flex-wrap: wrap;
   justify-content: space-between;
-  padding: 10px 15px;
+  align-items: center;
+  padding: 5px;
+  margin: 5px;
+}
+.box5{
+  width: 98%;
+  border: 1px rgba(0, 0, 0, 0) solid;
+  border-radius: 3px;
+  background-color: rgba(128, 45, 45, 0);
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+  padding: 5px;
   margin: 5px;
 }
 
@@ -91,13 +108,13 @@ label {
 */
 
 span {
-  margin: 0 0 15px 0;
+  margin: 0 0 5px 0;
   padding: 0 13px 0 13px;
   border-radius: 10px;
 }
 
 img {
-  width: 80px;
+  width: 60px;
   height: 80px;
   object-fit: cover;
   border: 1px solid black;
@@ -113,7 +130,7 @@ img {
 }
 
 .lr > img{
-  width: 300px;
+  width: 250px;
   height: 300px;
   object-fit: cover;
   border: 1px solid black;
@@ -127,6 +144,14 @@ h4{
 
 .l{
   display: flex;
+}
 
+.big-checkbox {
+width: 20px;
+height: 20px; 
+}
+
+label {
+text-align: left; 
 
 }
