--- a/client/src/App.css
+++ b/client/src/App.css
@@ -190,7 +190,7 @@ img {
   width: 250px;
   height: 300px;
   object-fit: cover;
-  border: 1px solid black;
+  border: 3px solid black;
   border-radius: 40px;
   margin: 10px;
 }
@@ -247,5 +247,6 @@ label {
 }
 
 #pirate{
-  font-family: 'UnifrakturCook', cursive;
+  font-family: 'Beau Rivage', cursive;
+  font-weight: bolder;
 }
