--- a/client/src/App.css
+++ b/client/src/App.css
@@ -470,6 +470,18 @@ a {
 }
 
 #squeezecolumn {
+  /* white-space: nowrap; */
+  width: 40%;
+  padding: 0px; 
+  margin: 0px;
+}
+/* #squeezecolumn2 {
   white-space: nowrap;
   width: 1%;
+} */
+
+#squeezecolumn > #btngroup {
+
+  padding: 0px;
+  margin: 0px; 
 }
