--- a/client/src/App.css
+++ b/client/src/App.css
@@ -13,7 +13,8 @@
     position: sticky;
     z-index: 3;
     top: 0px;
-    width: 500px;
+    width: 100%;
+    max-width: 500px; 
     /* border: 1px black solid; */
     /* border-top-right-radius: 5px;
     border-top-left-radius: 5px;
@@ -26,7 +27,7 @@
     flex-wrap: wrap;
     justify-content: space-evenly;
     align-items: center;
-    padding: 5px;
+    padding: 5px 30px;
     margin: 0px 5px 10px 5px;
     background-color: rgba(255, 255, 255, 0);
     /* background-color: #dad6d8; */
@@ -975,6 +976,7 @@ body {
 
 html:not([data-scroll="0"]) .box {
     width: 100%;
+    max-width: 100%; 
     border-radius: 0px;
     transition: 0.25s ease;
     background-color: rgb(33, 37, 41);
