--- a/client/src/App.css
+++ b/client/src/App.css
@@ -125,8 +125,8 @@
     border-radius: 12px;
     /* background-color: rgba(255, 255, 255, 0.6); */
     display: flex;
-    flex-direction: row-reverse;
-    justify-content: space-between;
+    flex-direction: row;
+    justify-content: flex-start;
     align-items: center;
 
     padding: 8px 14px;
@@ -136,11 +136,26 @@
         -2px -2px 8px rgba(255, 255, 255, 0.5),
         2px 2px 30px rgba(13, 109, 253, 0.5);
 }
+
+/* Inner container - label LEFT, toggle RIGHT with space between */
+.box6 > div {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between; /* Label LEFT, Toggle RIGHT */
+    width: 100%;
+}
+
 .box6 > div > label {
     text-shadow: 0px 0px 10px rgb(255, 255, 255);
+    margin: 0;
+    font-weight: 500;
+    flex-shrink: 0;
 }
-.box6 > div > #floatfield {
-    text-shadow: 0px 0px 10px rgb(255, 255, 255);
+
+.box6 > div > input[type="checkbox"] {
+    margin: 0;
+    flex-shrink: 0;
 }
 
 /* Submit button spacing */
